[UPDATE] fixed banner too small

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@
 .banner-row{
     display: flex;
     width: 100%;
-    height: 400px;
+    height: 700px;
     flex-direction: row;
     align-items: center;
     justify-content: center;
